[package]
name = "reconf"
description = "A config file templating engine with an embedded scripting language."
authors = ["QuantumCoded"]
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
dashmap = "5.4.0"
# TODO: make interactive mode
# dialoguer = { version = "0.10.2", features = [], default-features = false }
dirs = "4.0.0"
handlebars = { version = "4.3.5", features = ["script_helper", "dir_source"] }
main_error = "0.1.2"
rhai = "1.10.1"
serde = { version = "1.0.147", features = ["derive"] }
tar = "0.4.38"
thiserror = "1.0.37"
toml = "0.5.9"
